change title test 2

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      Ionic Blank 123123123
+      Ionic Blank this is a test
     </ion-title>
   </ion-navbar>
 </ion-header>
